[gd_scene load_steps=18 format=2]

[ext_resource path="res://SISTEMA/GUI/GloboTextos/Globos_texto.png" type="Texture" id=1]
[ext_resource path="res://SISTEMA/GUI/GloboTextos/Globo_Dialogo.tres" type="StyleBox" id=2]
[ext_resource path="res://RECURSOS/FONTS/my-standard.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://SISTEMA/GUI/GloboTextos/Globo_Dialogo.gd" type="Script" id=4]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 51.942, 106.441, 33.324, 34.9416 )
margin_left = 8.41937
margin_right = 4.00551
margin_top = 7.59515
margin_bottom = 3.50482

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 1 )
region_rect = Rect2( 542.514, 14.6147, 216.938, 123.396 )
margin_left = 0.66342
margin_top = 5.97078

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 1 )
region_rect = Rect2( 606.916, 143.394, 43.6341, 67.2478 )
margin_left = 6.16011
margin_top = 8.21347
margin_bottom = 6.67345

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 1 )
region_rect = Rect2( 795.717, 22.6199, 231.848, 158.523 )
margin_left = 18.1568
margin_right = 11.8717
margin_top = 13.2684
margin_bottom = 11.1734

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 1 )
region_rect = Rect2( 871.198, 186.036, 44.9352, 31.8528 )
margin_left = 5.85368
margin_right = 2.50872
margin_top = 3.76308
margin_bottom = 3.34496

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 1 )
region_rect = Rect2( 867.468, 220.498, 27.2878, 23.3267 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 1 )
region_rect = Rect2( 857.943, 244.052, 19.1124, 20.5826 )

[sub_resource type="DynamicFont" id=8]
size = 26
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 1
extra_spacing_space = 1
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=9]
resource_name = "AnimarIcono"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Globos/GuiaGloboNormal/Icon:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.295788 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 260.046, -69.0346 ), Vector2( 260.046, -53.4606 ), Vector2( 260.046, -53.4606 ), Vector2( 260.046, -68.9673 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "ApareceGloboExclamacion"
length = 0.22
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Globos/GuiaGloboNormal/Globo_exclamando:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Globos/GuiaGloboNormal/Globo_normal:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Globos/GuiaGloboNormal/Globo_pensando:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Globos/GuiaGloboNormal:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.14, 0.18 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( -48.7575, 47.5683 ), Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Globos/GuiaGloboNormal:scale")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.14, 0.18, 0.22 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Globos/RichTextLabel:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.22 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=11]
tracks/0/type = "value"
tracks/0/path = NodePath("Globos/GuiaGloboNormal:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Globos/GuiaGloboNormal:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1e-05, -0.25, 0, 0.49, 0.824764, 1, -0.31, 0.399861, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Globos/GuiaGloboNormal:scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.36, 0.145592, 0, 1.09411, 1, -0.06, 0.22205, 0.33, 0.130516 ),
"times": PoolRealArray( 0, 1 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("Globos/RichTextLabel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ false, true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_Globo_Dialogo_EmpezarAnimacionTexto"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Globos/GuiaGloboNormal/Globo_exclamando:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Globos/GuiaGloboNormal/Globo_pensando:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Globos/GuiaGloboNormal/Globo_normal:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="Animation" id=12]
resource_name = "ApareceGloboPensando"
tracks/0/type = "value"
tracks/0/path = NodePath("Globos/GuiaGloboNormal:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Globos/GuiaGloboNormal:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1e-05, -0.25, 0, 0.49, 0.824764, 1, -0.31, 0.399861, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Globos/GuiaGloboNormal:scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.36, 0.145592, 0, 1.09411, 1, -0.06, 0.22205, 0.33, 0.130516 ),
"times": PoolRealArray( 0, 1 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("Globos/RichTextLabel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ false, true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_Globo_Dialogo_EmpezarAnimacionTexto"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Globos/GuiaGloboNormal/Globo_exclamando:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Globos/GuiaGloboNormal/Globo_pensando:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Globos/GuiaGloboNormal/Globo_normal:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}

[sub_resource type="Animation" id=13]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Globos/GuiaGloboNormal:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Globos/GuiaGloboNormal:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Globos/GuiaGloboNormal/Globo_pensando/nube1:rect_position")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 64, 176 ), Vector2( 58.2657, 170.857 ), Vector2( 54.8983, 168.612 ), Vector2( 58.2657, 170.857 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Globos/GuiaGloboNormal/Globo_pensando/nube2:rect_position")
tracks/3/interp = 0
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 68.2045, 196.227 ), Vector2( 74.9392, 193.421 ), Vector2( 77.7454, 193.983 ), Vector2( 74.9392, 193.421 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Globos/GuiaGloboNormal/Globo_pensando/nube3:rect_position")
tracks/4/interp = 0
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 57.7045, 213.727 ), Vector2( 56.582, 210.921 ), Vector2( 61.0719, 206.993 ), Vector2( 56.582, 210.921 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Globos/GuiaGloboNormal/Globo_pensando:rect_size")
tracks/5/interp = 0
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 384.013, 208 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Globos/GuiaGloboNormal/Globo_pensando:rect_position")
tracks/6/interp = 0
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -66, -221 ) ]
}

[node name="Globo_Dialogo" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Globos" type="Control" parent="."]
margin_right = 401.0
margin_bottom = 256.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GuiaGloboNormal" type="Node2D" parent="Globos"]

[node name="Globo_normal" type="Panel" parent="Globos/GuiaGloboNormal"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -66.0
margin_top = -221.0
margin_right = 312.0
margin_bottom = -21.0
custom_styles/panel = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Perilla_hablando" type="Panel" parent="Globos/GuiaGloboNormal/Globo_normal"]
margin_left = 58.4298
margin_top = 178.874
margin_right = 98.4298
margin_bottom = 218.874
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="Sprite" parent="Globos/GuiaGloboNormal"]
visible = false
position = Vector2( 260.046, -52.0244 )
z_index = 4
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 82.3731, 152.058, 31.6224, 23.8423 )

[node name="Globo_exclamando" type="Panel" parent="Globos/GuiaGloboNormal"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -114.0
margin_top = -257.0
margin_right = 362.0
margin_bottom = 1.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Perilla_exclamando" type="Panel" parent="Globos/GuiaGloboNormal/Globo_exclamando"]
margin_left = 76.3511
margin_top = 209.541
margin_right = 159.351
margin_bottom = 315.109
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Globo_pensando" type="Panel" parent="Globos/GuiaGloboNormal"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -66.0
margin_top = -221.0
margin_right = 318.013
margin_bottom = -13.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nube1" type="Panel" parent="Globos/GuiaGloboNormal/Globo_pensando"]
margin_left = 64.0
margin_top = 176.0
margin_right = 104.0
margin_bottom = 216.0
rect_scale = Vector2( 1.68, 1.16 )
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nube2" type="Panel" parent="Globos/GuiaGloboNormal/Globo_pensando"]
margin_left = 68.2045
margin_top = 196.227
margin_right = 108.204
margin_bottom = 236.227
custom_styles/panel = SubResource( 6 )

[node name="nube3" type="Panel" parent="Globos/GuiaGloboNormal/Globo_pensando"]
margin_left = 57.7045
margin_top = 213.727
margin_right = 97.7046
margin_bottom = 253.727
custom_styles/panel = SubResource( 7 )

[node name="RichTextLabel" type="RichTextLabel" parent="Globos"]
anchor_top = 0.66
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -353.96
margin_right = 270.0
margin_bottom = -314.0
rect_min_size = Vector2( 290, 0 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 8 )
scroll_active = false
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AnimarIcono = SubResource( 9 )
anims/ApareceGloboExclamacion = SubResource( 10 )
anims/ApareceGloboNormal = SubResource( 11 )
anims/ApareceGloboPensando = SubResource( 12 )
anims/GloboPensando = SubResource( 13 )

[connection signal="EmpezarAnimacionTexto" from="." to="." method="_on_Globo_Dialogo_EmpezarAnimacionTexto"]
[connection signal="TerminaAnimacionTexto" from="." to="." method="_on_Globo_Dialogo_TerminaAnimacionTexto"]
